--- a/settings.env.jinja2
+++ b/settings.env.jinja2
@@ -1,7 +1,7 @@
-SERVER_NAME = "Scut Snuggleshine"
-SEED = "87850771"
-MODE = "creative"
+SERVER_NAME = "{{ SERVER_NAME }}"
+SEED = "{{ SEED }}"
+MODE = "{{ MODE }}"
 RCON = "true"
-
-RCON_PASSWORD = "2B58l8d84T6P"
+RCON_PASSWORD = "{{ RCON_PASSWORD }}"
+MODRINTH_PROJECTS = "coreprotect"
 
