--- a/scripts/templates/settings.env.jinja2
+++ b/scripts/templates/settings.env.jinja2
@@ -7,5 +7,5 @@ SEED = "{{ SEED }}"
 MODE = "{{ MODE }}"
 RCON = "true"
 RCON_PASSWORD = "{{ RCON_PASSWORD }}"
-MODRINTH_PROJECTS = "coreprotect"
+MODRINTH_PROJECTS = "coreprotect,dynmap"
 
