--- a/scripts/templates/settings.env.jinja2
+++ b/scripts/templates/settings.env.jinja2
@@ -1,11 +1,13 @@
 UID = "{{ UID }}"
 GID = "{{ GID }}"
 TYPE = "PAPER"
+VERSION = "1.20.1"
 EULA = "true"
 SERVER_NAME = "{{ SERVER_NAME }}"
 SEED = "{{ SEED }}"
 MODE = "{{ MODE }}"
 RCON = "true"
 RCON_PASSWORD = "{{ RCON_PASSWORD }}"
-MODRINTH_PROJECTS = "coreprotect,dynmap,essentialsx"
+MODRINTH_PROJECTS = "coreprotect,dynmap:beta,essentialsx"
+#DEBUG_HELPER = true
 
